added css color names when forgotten in html

--- a/app/assets/stylesheets/pages/_index_exhibitions.scss
+++ b/app/assets/stylesheets/pages/_index_exhibitions.scss
@@ -12,10 +12,10 @@
 #discover {
   font-weight: bold ;
   background-color: transparent;
-  border: 2px solid white;
+  border: 2px solid $white;
 }
 
 #discover:hover {
-  background-color: white;
+  background-color: $white;
   color: black;
 }
