--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,7 +7,7 @@
 }
 .card .category {
   position: absolute;
-  background: #f7c843;
+  background: $brand-color;
   color: white;
   padding: 10px 10px 5px 10px;
   right: 15px;
@@ -27,7 +27,7 @@
 }
 .card hr {
   width: 20%;
-  border-color: #f7c843;
+  border-color: $brand-color;
   margin-bottom: 0;
 }
 .card .description {
