--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: $white;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -52,7 +52,7 @@
 .navbar-wagon-item.navbar-wagon-link:after {
   content: "";
   display: block;
-  background: #ffffff;
+  background: $white;
   height: 5px;
   width: 0px;
   transition: all .4s;
@@ -60,7 +60,7 @@
 }
 
 .navbar-wagon-item.navbar-wagon-link:hover:after {
-  background: #f7c843;
+  background: $brand-color;
   width: 100%;
 }
 
@@ -72,13 +72,13 @@
 
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
+  box-shadow: 1px 1px 4px $white;
+  border-color: $white;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
+  color: #999 !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
@@ -94,8 +94,8 @@
   position: absolute;
   right: 10px;
   top: -6px;
-  background-color: white;
+  background-color: $white;
   transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
+  border-left: 1px solid $white;
+  border-top: 1px solid $white;
 }
