--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -55,7 +55,7 @@ hr.separator {
 // Artist category display hack
 span.artist-category {
   background: $brand-color;
-  color: white;
+  color: $white;
   padding: 3px 7px;
   border-radius: 20px;
   font-size: .8em;
