--- a/app/assets/stylesheets/pages/_show_artist.scss
+++ b/app/assets/stylesheets/pages/_show_artist.scss
@@ -15,7 +15,7 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
   margin-bottom: 20px;
-  background: white;
+  background: $white;
 }
 
 .artist-card img {
