add animation to home banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,13 @@
 <!-- banner -->
+<div id="fadein">
+  <div class="banner" style="background: linear-gradient(155deg, rgba(5, 5, 5, 0.6) 10%, rgba(5, 5, 5, 0.2) 80%), url('<%= image_path "office.jpg" %>');">
+  </div>
+  <div class="banner" style="background: linear-gradient(155deg, rgba(5, 5, 5, 0.6) 10%, rgba(5, 5, 5, 0.2) 80%), url('<%= image_path "office2.jpg" %>');">
+  </div>
+  <div class="banner" style="background: linear-gradient(155deg, rgba(5, 5, 5, 0.6) 10%, rgba(5, 5, 5, 0.2) 80%), url('<%= image_path "office3.jpg" %>');">
+  </div>
+</div>
+
 
 <div class="banner image-size" style="background-image: url('<%= image_path "office.jpg" %>');">
   <div class="banner-content">
