--- a/app/assets/stylesheets/pages/_show_artist.scss
+++ b/app/assets/stylesheets/pages/_show_artist.scss
@@ -18,6 +18,10 @@
   background: white;
 }
 
+.artist-card img {
+  margin-top: 40px;
+}
+
 .artist-card h1 {
   font-size: 1.6em;
   margin: 10px 0;
