--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: $gray;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -40,12 +40,12 @@
 
 /* Navbar standard link */
 .navbar-wagon-link {
-  color: $gray;
+  color: white;
   font-size: 14px;
   font-weight: 700;
 }
 .navbar-wagon-link:hover {
-  color: $gray;
+  color: white;
   text-decoration: none;
 }
 
