--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 <div class="wrapper padded">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini underline">An easy proces</h2>
+      <h2 class="padded-mini">An easy proces</h2>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
           <div><i class="fa fa-pencil" aria-hidden="true"></i></div>
@@ -52,7 +52,7 @@
 <div class="wrapper padded bg-grey">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini underline">Discover how le Wagon improved his workplace with us</h2>
+      <h2 class="padded-mini">Discover how le Wagon improved his workplace with us</h2>
       <div class="testimonial">
         <div class="col-sm-12 col-md-6">
           <div class="testimonial-content">
@@ -77,7 +77,7 @@
 <div class="wrapper padded">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini underline">Last registered artists</h2>
+      <h2 class="padded-mini">Last registered artists</h2>
        <% 4.times do %>
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="card text-center">
@@ -100,7 +100,7 @@
 <div class="wrapper padded bg-grey">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini underline">Four reasons to work with us</h2>
+      <h2 class="padded-mini">Four reasons to work with us</h2>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
           <img src="http://placehold.it/150x150" alt="">
