--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -52,7 +52,7 @@
 
   .slide {
     background-position: center;
-    background-size: cover;
+    background-size: cover!important;
     opacity: 0;
     height: 100%;
     top: 0;
