set back end for exhibition creation with style and category

--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,4 +1,4 @@
-<% link_image = @exhibition.photos.first.path || "banner-artist.jpeg" %>
+<% link_image = @exhibition.photos.first || "banner-artist.jpeg" %>
 <div class="banner-company" style="background-image: url('<%= cl_image_path link_image %>');"></div>
   <div class="wrapper exhibition padded">
     <div class="container">
