--- a/app/views/exhibitions/new.html.erb
+++ b/app/views/exhibitions/new.html.erb
@@ -2,6 +2,23 @@
   <div class="row">
     <div class="col-xs-10 col-xs-offset-1">
       <h1>New exhibition</h1>
+      <div id="select-category">
+        <h2>Select your 4 favorites artworks :</h2>
+        <form action="">
+          <% 16.times do %>
+            <label>
+              <% artwork_selected = @categories.sample.artworks.sample %>
+              <input type="checkbox" value="<%= artwork_selected.category.id %>">
+                <%= cl_image_tag artwork_picture(artwork_selected), width: 233, height: 150, crop: :fill %>
+            </label>
+          <% end %>
+          <input type="submit">
+        </form>
+        <hr>
+        <h2>Select your 4 favorites artworks :</h2>
+        <p>to do</p>
+        <hr>
+      </div>
        <%= render "form" %>
     </div>
   </div>
