--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,47 +10,66 @@
   <div class="slideshow-content text-center">
     <h1>Enlighten Your Office with Art</h1>
     <p> Exhibit artists of tomorrow in your office</p>
+    <p class="vanity-data"> 300 Artists - 80 exhibitions created </p>
+
       <%= link_to "Create my exhibit", new_exhibition_path, class: "btn btn-primary btn-lg", id: "custom" %>
   </div>
 </div>
 
 <!-- key step-->
 
-<div class="wrapper padded">
+<div class="wrapper padded-mini bg-grey">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini">An easy proces</h2>
-      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+      <h2 class="padded-mini text-center">How it's Work ?</h2>
+      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <div class="key-step">
-          <div><i class="fa fa-pencil" aria-hidden="true"></i></div>
-          <h3>Create your exhibition</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, ratione, eligendi ducimus fugiat, sequi hic optio porro non excepturi aspernatur, similique autem pariatur laudantium nostrum reprehenderit ut ullam sunt ipsa.</p>
+          <div><i class="fa fa-paint-brush" aria-hidden="true"></i></div>
+          <h3>1-Create your exhibition</h3>
+          <p class="key-content">blah blah blah blah blah blah blah blah blah blah blah blah</p>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <div class="key-step">
           <div><i class="fa fa-users" aria-hidden="true"></i></div>
-          <h3> Artists apply to your exhibition</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, ratione, eligendi ducimus fugiat, sequi hic optio porro non excepturi aspernatur, similique autem pariatur laudantium nostrum reprehenderit ut ullam sunt ipsa.</p>
+          <h3>2-Artists apply to your exhibition</h3>
+          <p class="key-content">blah blah blah blah blah blah blah blah blah blah blah blah</p>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <div class="key-step">
           <div><i class="fa fa-heart" aria-hidden="true"></i></div>
-          <h3>Select your favorite Artist</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, ratione, eligendi ducimus fugiat, sequi hic optio porro non excepturi aspernatur, similique autem pariatur laudantium nostrum reprehenderit ut ullam sunt ipsa.</p>
-
+          <h3>3-Select your favorite Artist</h3>
+          <p class="key-content">blah blah blah blah blah blah blah blah blah blah blah blah</p>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-        <div class="key-step">
-          <div><i class="fa fa-thumbs-up" aria-hidden="true"></i></div>
-          <h3>And that's all !</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, ratione, eligendi ducimus fugiat, sequi hic optio porro non excepturi aspernatur, similique autem pariatur laudantium nostrum reprehenderit ut ullam sunt ipsa.</p>
-        </div>
+      <div class="text-center">
+      <%= link_to "read more", new_exhibition_path, class: "btn btn-primary btn-lg read" %>
       </div>
     </div>
   </div>
+</div>
+
+<!-- Last artwork-->
+
+<div class="wrapper padded">
+  <div class="container">
+    <div class="row">
+      <h2 class="padded-mini">Last Artworks from our Artist community</h2>
+        <% 12.times do %>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="card text-center">
+            <p class="category"><i class="fa fa-camera" aria-hidden="true"></i></p>
+            <p class="speciality">Photographer</p>
+            <hr>
+            <a href="" class="btn btn-primary">View profile</a>
+          </div>
+          </div>
+        <%end%>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <!-- testimonial homepage -->
@@ -78,32 +97,9 @@
   </div>
 </div>
 
-<!-- artist's card-->
-
-<div class="wrapper padded">
-  <div class="container">
-    <div class="row">
-      <h2 class="padded-mini">Last registered artists</h2>
-       <% 4.times do %>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="card text-center">
-            <p class="category"><i class="fa fa-camera" aria-hidden="true"></i></p>
-            <img src='<%= image_path "artist2.jpeg" %>'  alt="" class="avatar-medium">
-            <p class="name">John Doe</p>
-            <p class="speciality">Photographer</p>
-            <hr>
-            <p class="description"><%= truncate('Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, quod deserunt numquam fugiat. Blanditiis, modi, error. Quod vero officiis explicabo reiciendis delectus placeat vitae ea hic, a eligendi incidunt expedita.', 90) %></p>
-            <a href="" class="btn btn-primary">View profile</a>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
-
 <!-- reassurance -->
 
-<div class="wrapper padded bg-grey">
+<div class="wrapper padded">
   <div class="container">
     <div class="row">
       <h2 class="padded-mini">Four reasons to work with us</h2>
