replaced buttons by icons

--- a/app/assets/stylesheets/pages/_dashboard_company.scss
+++ b/app/assets/stylesheets/pages/_dashboard_company.scss
@@ -78,7 +78,7 @@
 }
 
 #dashboard .exhibition-bids .artworks img {
-    border-radius: 10px;
+    // border-radius: 10px;
 }
 
 #dashboard .exhibition-bids .cta {
