Step one working

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
   <div class="slideshow-content text-center">
     <h1>Enlighten Your Office with Art</h1>
     <p> Exhibit artists of tomorrow in your office</p>
-      <%= link_to "Create my exhibit", new_exhibition_path, class: "btn btn-primary btn-lg", id: "custom" %>
+      <%= link_to "Create my exhibit", new_step1_exhibitions_path, class: "btn btn-primary btn-lg", id: "custom" %>
   </div>
 </div>
 
