--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,7 +29,8 @@
 
 .key-step i.fa {
   font-size: 55px;
-  color: black;
+  color: $gray;
+
 }
 
 .key-step h3 {
@@ -39,16 +40,30 @@
 
 .key-step p {
   margin-top: 10px;
-  text-align: justify;
+  text-align: justify-all;
 }
 
 a.btn.btn-primary.btn-lg.read {
   margin: 20px;
   background: transparent;
-  color: black;
+  color: $gray;
   border: 3px solid $yellow;
-  border-radius: 20px;
+  border-radius: 3px;
 }
+
+a.btn.btn-primary.btn-lg.read:hover {
+  border-radius: 10px;
+}
+
+a.btn.btn-primary.btn-lg.artist-banner {
+  margin: 20px;
+  background: transparent;
+  color: white;
+  border: 3px solid white;
+  border-radius: 3px;
+}
+
+
 
 .key-content {
   font-size: 13px;
@@ -57,14 +72,8 @@ a.btn.btn-primary.btn-lg.read {
 #custom {
   background: transparent;
   color: white;
-  border: 3px solid white;
+  border: 4px solid white;
   border-radius: 3px;
   font-weight: bold;
-  transition: 0.5s;
-
-}
-
-#custom:hover {
-  opacity: 0.8
 }
 
