--- a/app/views/exhibitions/_form.html.erb
+++ b/app/views/exhibitions/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for(@exhibition) do |f| %>
   <%= f.error_notification %>
-  <%= f.input :categories, as: :hidden, :input_html => { :value => ["1","2"] }  %>
-  <%= f.input :styles, as: :hidden, :input_html => { :value => ["1","2"] }  %>
+  <%= f.input :categories, as: :hidden, :input_html => { :value => @selected_categories_id }  %>
+  <%= f.input :styles, as: :hidden, :input_html => { :value => @selected_styles_id }  %>
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :address %>
