--- a/app/views/exhibitions/new_step_two.html.erb
+++ b/app/views/exhibitions/new_step_two.html.erb
@@ -8,9 +8,14 @@
           <% @selected_categories_id.each do |category| %>
             <input type="hidden" name="selected_categories[]" value="<%= category %>">
           <% end %>
+          <% artworks_list = [] %>
           <% 16.times do %>
             <label>
               <% artwork_selected = @categories.sample.artworks.sample %>
+              <% while artworks_list.include? artwork_selected %>
+                <% artwork_selected = @categories.sample.artworks.sample %>
+              <% end %>
+              % artworks_list << artwork_selected %>
               <input type="checkbox" name="selected_styles[]" value="<%= artwork_selected.style.id %>">
                 <%= cl_image_tag artwork_picture(artwork_selected), width: 233, height: 150, crop: :fill %>
             </label>
