--- a/app/views/exhibitions/new_step_two.html.erb
+++ b/app/views/exhibitions/new_step_two.html.erb
@@ -1,13 +1,13 @@
 <div class="container padded">
   <div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
       <h1>New exhibition</h1>
-      <div id="select-category">
-        <h2>Select your favorites artworks :</h2>
-        <form action="<%= new_exhibition_path %>">
-          <% @selected_categories_id.each do |category| %>
-            <input type="hidden" name="selected_categories[]" value="<%= category %>">
-          <% end %>
+      <h2>Select your favorites artworks :</h2>
+      <form action="<%= new_exhibition_path %>">
+        <% @selected_categories_id.each do |category| %>
+          <input type="hidden" name="selected_categories[]" value="<%= category %>">
+        <% end %>
+        <div id="select-artwork">
           <% artworks_list = [] %>
           <% 16.times do %>
             <label>
@@ -15,14 +15,14 @@
               <% while artworks_list.include? artwork_selected %>
                 <% artwork_selected = @categories.sample.artworks.sample %>
               <% end %>
-              % artworks_list << artwork_selected %>
+              <% artworks_list << artwork_selected %>
               <input type="checkbox" name="selected_styles[]" value="<%= artwork_selected.style.id %>">
-                <%= cl_image_tag artwork_picture(artwork_selected), width: 233, height: 150, crop: :fill %>
+                <%= cl_image_tag artwork_picture(artwork_selected), width: 200, height: 200, crop: :fill %>
             </label>
           <% end %>
-          <input type="submit">
-        </form>
-      </div>
+        </div>
+        <input type="submit" class="btn btn-primary pull-right">
+      </form>
     </div>
   </div>
 </div>
