--- a/app/views/exhibitions/new.html.erb
+++ b/app/views/exhibitions/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container padded">
   <div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
       <h1>New exhibition</h1>
         <%= render "form" %>
     </div>
