--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -1,17 +1,7 @@
-.badge-container {
-  position: relative;
-  font-size: 25px;
-  line-height: 30px;
-  width: 30px;
-  color: grey;
-}
-
 .badge {
   position: absolute;
-  top: -5px;
-  right: -5px;
   font-size: 10px;
-  color: white;
+  color: black!important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,25 +10,33 @@
   text-align: center;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  background-color: $brand-color!important;
+  padding: 2px 3px!important;
 }
+
 .badge-red {
   background: #EE5F5B;
 }
+
 .badge-green {
   background: #32B796;
 }
+
 .badge-blue {
   background: #469AE0;
 }
+
 .badge-black {
   background: black;
 }
+
 .badge-bordered {
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
 
-.fa.fa-eye {
+.fa.fa-comment {
   font-size: 40px;
   color: black;
+  position: absolute;
 }
