--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -116,3 +116,26 @@
   transform: scale(1.02);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
+
+// Dashboard cards
+.dashboard-card {
+  color: white;
+  filter: grayscale(100%);
+  // padding: 20px;
+  transition: .3s all;
+}
+
+.dashboard-card:hover {
+  transform: scale(1.02);
+  filter: none;
+}
+
+#dashboard-exhibit-card-pic {
+  color: white;
+  filter: grayscale(100%);
+  transition: .3s all;
+}
+
+#dashboard-exhibit-card-pic:hover {
+  filter: none;
+}
