--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,21 +1,26 @@
 .btn-new-small {
   display: inline-block;
-  border: 2px solid #000;
-  font-size: 1.8rem;
+  border: 2px solid $brand-color;
   font-weight: 600;
   line-height: 1.8rem;
-  /* -webkit-font-smoothing: auto; */
-  /* -webkit-transition: all .2s ease; */
   transition: all .2s ease;
-  padding: 2rem 3rem;
-  box-shadow: 0 0 0 0 #000;
   background-color: transparent;
-  color: #000;
   padding: 14px;
 }
 
 .btn-new-small:hover {
   box-shadow: 0 0 0 2px $brand-color;
-  border: 0;
+  border: 2px solid transparent;
   text-decoration: none;
 }
+
+.btn-new-small p {
+  margin: 0;
+  color: $brand-color;
+  font-size: 17px;
+  font-weight: 400;
+}
+
+ input.pull-right.btn-new-small {
+  color: $brand-color;
+ }
