--- a/app/assets/stylesheets/components/_product.scss
+++ b/app/assets/stylesheets/components/_product.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 0 20px 20px 30px;
   border-radius: 3px;
   transition: all 0.15s ease;
 }
@@ -20,20 +20,25 @@
   font-weight: lighter;
   color: #999999;
   margin-bottom: 0;
-  min-height: 50px;
+  min-height: 40px;
 }
 
 /* Product decsription */
 .product-description {
   flex: 0 0 auto;
   margin-right: 20px;
+  max-width: 400px;
 }
 
 .product-description p{
   font-style: italic;
+  font-style: 17px;
   font-weight: lighter;
   color: #999999;
+  line-height: 30px;
+  text-align: justify;
 }
+
 
 /* Product image */
 .product-image {
@@ -74,3 +79,7 @@
 
 .product:hover .product-controls-hidden a { color: #E6E6E6 }
 .product-upvote:hover .product-arrow { border-bottom: 9px solid #5898f1 }
+
+#artist-answers {
+  color: $brand-color;
+}
