--- a/app/assets/stylesheets/pages/_dashboard_company.scss
+++ b/app/assets/stylesheets/pages/_dashboard_company.scss
@@ -84,9 +84,14 @@
 }
 
 .exhibition-title h3{
-  padding: 0 20px;
+  padding: 10px 20px 0 30px;
 }
 
 .exhibition-title i, .badge {
   right: 5px;
+}
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+    color: #f7c843;
+    background-color: #000000;
 }
