--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -6,22 +6,35 @@
             <div class="row">
               <div class="col-xs-12">
                 <h3><%= exhibition.title.capitalize %>
-                  <div class="badge">
-                    <%= exhibition.bids.count %>
-                  </div>
+                  <ul class="list-inline product-controls hidden-sm hidden-xs pull-right">
+                    <li>
+                      <%= link_to edit_exhibition_path(exhibition) do %>
+                        <i class="fa fa-paint-brush" aria-hidden="true"></i>
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to exhibition_path(exhibition),
+                          method: :delete,
+                          data: {confirm: "Are you sure?"},
+                          class: 'pull-right' do %>
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                      <% end %>
+                    </li>
+                  </ul>
                 </h3>
               </div>
             </div>
           </div>
 
           <div class="product">
-            <%= cl_image_tag exhibition.photos.first.path, width: 200, height: 200, crop: :fill, class: "product-image hidden-xs", id: "dashboard-exhibit-card-pic"%>
 
-
-            <div class="product-details">
+            <%= cl_image_tag exhibition.photos.first.path, width: 200, height: 200, crop: :fill, class: "product-image dashboard-card hidden-xs"%>
+            <div class="product-details bolder-hover">
               <div class="row">
                 <div class="col-xs-12">
-                  <p><i class="fa fa-map-marker" aria-hidden="true"></i>  <%= exhibition.address.capitalize %></p>
+                  <p><i class="fa fa-heart" aria-hidden="true" id="artist-answers"></i>
+                  <%= exhibition.bids.count %>
+                   <%= pluralize_without_count(exhibition.bids.count, 'artist') %> candidated</p>
                 </div>
                 <div class="col-xs-12">
                   <p><i class="fa fa-calendar" aria-hidden="true"></i> <%= exhibition.start_date %></p>
@@ -32,6 +45,9 @@
                 <div class="col-xs-12">
                   <p><i class="fa fa-eur" aria-hidden="true"></i> <%= exhibition.min_price %></p>
                 </div>
+                <div class="col-xs-12">
+                  <p><i class="fa fa-map-marker" aria-hidden="true"></i>  <%= exhibition.address.capitalize %></p>
+                </div>
               </div>
             </div>
 
@@ -39,27 +55,15 @@
             <br>
               <div class="row">
                 <div class="col-xs-12">
-                  <p>"<%= exhibition.description %>"</p>
+                  <% if exhibition.description %>
+                    <p>"<%= truncate(exhibition.description, 400) %>"</p>
+                  <% end %>
                 </div>
               </div>
             </div>
-
-            <ul class="list-inline product-controls hidden-sm hidden-xs">
-              <li>
-                <%= link_to edit_exhibition_path(exhibition) do %>
-                  <i class="fa fa-paint-brush" aria-hidden="true"></i>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to exhibition_path(exhibition),
-                    method: :delete,
-                    data: {confirm: "Are you sure?"},
-                    class: 'pull-right' do %>
-                  <i class="fa fa-trash" aria-hidden="true"></i>
-                <% end %>
-              </li>
-            </ul>
-
+            <br>
+            <div class="btn-new-small dashboard-cta"> <p>View proposals</p></div>
+<!-- brush & trash initially here -->
           </div>
         </div>
         <div class="exhibition-bids">
