--- a/app/assets/stylesheets/pages/_new_exhibition_form.scss
+++ b/app/assets/stylesheets/pages/_new_exhibition_form.scss
@@ -1,27 +1,45 @@
-#select-artwork {
+#select-artwork, #select-category {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-div#select-artwork label {
+#select-artwork label, #select-category label {
   margin: 0;
 }
 
-#select-artwork input[type="checkbox"] {
+#select-artwork input[type="checkbox"], #select-category input[type="checkbox"] {
   display: none;
 }
 
-div#select-artwork img {
+#select-artwork img, #select-category img {
   margin: 5px;
   border: 5px solid transparent;
   transition: border .5s;
 }
 
-div#select-artwork img:hover {
+#select-artwork img:hover, #select-category img:hover {
   border-color: $brand-color;
 }
 
-#select-artwork input[type="checkbox"]:checked + img {
+#select-artwork input[type="checkbox"]:checked + img, #select-category input[type="checkbox"]:checked + img {
   border-color: $yellow;
+}
+
+#select-category label {
+  position: relative;
+}
+
+#select-category label {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+div#select-category label p {
+    position: absolute;
+    color: white;
+    text-transform: capitalize;
+    font-size: 2em;
 }
