--- a/app/views/exhibitions/new_step_one.html.erb
+++ b/app/views/exhibitions/new_step_one.html.erb
@@ -2,19 +2,15 @@
   <div class="row">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
       <h1>New exhibition</h1>
-      <h2>Select your favorites artworks :</h2>
+      <h2>Select your favorites categories :</h2>
       <form action="<%= new_step2_exhibitions_path %>">
-        <div id="select-artwork">
-          <% artworks_list = [] %>
-          <% 16.times do %>
+        <div id="select-category">
+          <% @categories.each do |category| %>
+            <% artwork_selected = category.artworks.sample %>
             <label>
-              <% artwork_selected = @categories.sample.artworks.sample %>
-              <% while artworks_list.include? artwork_selected %>
-                <% artwork_selected = @categories.sample.artworks.sample %>
-              <% end %>
-              <% artworks_list << artwork_selected %>
               <input type="checkbox" name="selected_categories[]" value="<%= artwork_selected.category.id %>">
-                <%= cl_image_tag artwork_picture(artwork_selected), width: 200, height: 200, crop: :fill, class: 'sample-artwork'%>
+                  <%= cl_image_tag artwork_picture(artwork_selected), width: 400, height: 400, crop: :fill, class: 'sample-artwork'%>
+                  <p><%= category.name %></p>
             </label>
           <% end %>
         </div>
