--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -47,7 +47,7 @@ a.btn.btn-primary.btn-lg.read {
   margin: 20px;
   background: transparent;
   color: $gray;
-  border: 3px solid $yellow;
+  border: 3px solid $gray;
   border-radius: 3px;
 }
 
@@ -72,8 +72,7 @@ a.btn.btn-primary.btn-lg.artist-banner {
 #custom {
   background: transparent;
   color: white;
-  border: 4px solid white;
-  border-radius: 3px;
+  border: 3px solid white;
   font-weight: bold;
 }
 
