homepage-artsworks-update1

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -143,6 +143,17 @@
             </div>
           </div>
       </div>
+       <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="artwork-card">
+            <div class="content">
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496661331/image-moon_i3zbiz.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <p class="description">Testestestestestest</p>
+            </div>
+            <div class="details">
+              <h2 class="name text-center">TEST NAME</h2>
+            </div>
+          </div>
+      </div>
     </div>
   </div>
 </div>
