--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,6 +1,6 @@
 // Your footer style
 #footer {
-  background: #1d1d1d;
+  background: #050505;
   color: rgba(255, 255, 255, 0.8);
   padding-bottom: 0;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
