--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -27,7 +27,6 @@
           </div>
 
           <div class="product">
-
             <%= cl_image_tag exhibition.photos.first.path, width: 200, height: 200, crop: :fill, class: "product-image dashboard-card hidden-xs"%>
             <div class="product-details bolder-hover">
               <div class="row">
@@ -43,7 +42,7 @@
                   <p><i class="fa fa-heartbeat" aria-hidden="true"></i> <%= exhibition.duration %> months</p>
                 </div>
                 <div class="col-xs-12">
-                  <p><i class="fa fa-eur" aria-hidden="true"></i> <%= exhibition.min_price %></p>
+                  <p><i class="fa fa-usd" aria-hidden="true"></i> <%= exhibition.min_price %></p>
                 </div>
                 <div class="col-xs-12">
                   <p><i class="fa fa-map-marker" aria-hidden="true"></i>  <%= exhibition.address.capitalize %></p>
@@ -56,7 +55,7 @@
               <div class="row">
                 <div class="col-xs-12">
                   <% if exhibition.description %>
-                    <p>"<%= truncate(exhibition.description, 400) %>"</p>
+                    <p>"<%= truncate(exhibition.description, 200) %>"</p>
                   <% end %>
                 </div>
               </div>
@@ -67,60 +66,77 @@
         </div>
         <div class="exhibition-bids">
           <% exhibition.bids.each do |bid| %>
+            <!-- Card bid -->
             <div class="bid">
-              <div class="reject">
-                <%= link_to bid_path(bid), method: :delete do %>
-                  <i class="fa fa-times" aria-hidden="true"></i>
-                <% end %>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 col-md-3">
-                  <div class="user text-center">
-                    <h4><%= bid.user.first_name %> <%= bid.user.last_name %></h4>
-                    <% user_picture = bid.user.facebook_picture_url || 'https://placehold.it/150x150' %>
-                    <%= link_to artist_users_path(bid.user.id) do %>
-                      <%= image_tag user_picture, class: 'avatar-medium bordered' %>
-                    <% end %>
-                    <% if bid.user.description %>
-                      <p><%= truncate(bid.user.description, 50) %></p>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-2">
-                  <div class="proposal">
-                    <h4 class="underline">Proposal</h4>
-                    <div class="row">
-                      <div class="col-xs-6 col-md-12">
-                        <p><strong>Price :</strong><br><%= bid.price %></p>
-                      </div>
-                      <div class="col-xs-6 col-md-12">
-                        <p><strong>Style :</strong></p>
-                        <p>
-                          <% bid.user.categories.uniq.each do |category| %>
-                            <span class="artist-category"><%= category.name.capitalize %></span>
-                          <% end %>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-7">
-                  <div class="details">
-                    <h4 class="underline"><%= pluralize_without_count(bid.user.artworks.count, 'Last artwork') %></h4>
-                    <div class="artworks">
-                      <% bid.user.artworks.last(5).each do |artwork| %>
-                        <%= cl_image_tag artwork_picture(artwork), width: 200, height: 200, crop: :fill, class: "dashboard-card" %>
-                      <% end %>
-                    </div>
-                    <div class="cta">
-                      <div class="list-inline">
-                        <%= simple_form_for bid do |f| %>
-                          <%= f.input :status, input_html: {value: 'accepted'}, as: :hidden %>
-                          <%= f.submit "Book this artist !", class: 'pull-right btn-new-small' %>
+              <div class="wrapper">
+                <div class="container">
+                  <div class="row">
+                    <!-- artist's card-->
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                      <div class="card card-bid text-center">
+                        <% user_picture = bid.user.photo.path || 'https://placehold.it/150x150' %>
+                        <%= link_to artist_users_path(bid.user.id) do %>
+                          <%= cl_image_tag user_picture, width: 100, height: 100, crop: :fill, class: 'avatar-medium' %>
                         <% end %>
+                        <p class="name"><%= bid.user.first_name %> <%= bid.user.last_name %></p>
+                        <hr>
+                        <!-- artist description -->
+                        <div class="product-details">
+                          <% if bid.user.description %>
+                            <p class="description"><%= truncate(bid.user.description, 150) %></p>
+                          <% end %>
+                        </div>
+                        <hr style="margin-bottom: 15px">
+                        <!-- Artist specialties -->
+                        <div class="product-details bid-details">
+                          <p><i class="fa fa-tags" aria-hidden="true">
+                            <% bid.user.categories.uniq.each do |category| %>
+                              <%= category.name.capitalize %>
+                              <% if(category != bid.user.categories.last) %>,
+                              <% end %>
+                            <% end %>
+                          </i></p>
+                          <!-- bid price offer -->
+                          <p><i class="fa fa-usd" aria-hidden="true"></i> <%= bid.price %></p>
+                          <!-- bid status -->
+                          <p><i class="fa fa-thumb-tack" aria-hidden="true"></i> <%= bid.status %></p>
+                        </div>
+                        <!-- CTA bid card -->
+                        <div class="cta">
+                          <%= simple_form_for bid do |f| %>
+                            <%= f.input :status, input_html: {value: 'accepted'}, as: :hidden %>
+                            <%= f.submit "Book this artist !", class: 'btn-new-small' %>
+                          <% end %>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end artist bid card -->
+
+                    <!-- start artist bid pics -->
+                    <div class="card-bid-pics">
+                      <div class="col-xs-12 col-md-7">
+                        <div class="details">
+                          <!-- <h4 class="underline"><%= pluralize_without_count(bid.user.artworks.count, 'Last artwork') %></h4> -->
+                          <div class="artworks">
+                            <% bid.user.artworks.last(9).each do |artwork| %>
+                              <%= cl_image_tag artwork_picture(artwork), width: 150, height: 150, crop: :fill, class: "dashboard-card" %>
+                            <% end %>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+              <!-- Trash top right to delete bid card -->
+                <div class="reject">
+                  <ul class="list-inline product-controls hidden-sm hidden-xs pull-right">
+                    <li>
+                      <%= link_to bid_path(bid), method: :delete do %>
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                      <% end %>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
