--- a/app/assets/stylesheets/components/_product.scss
+++ b/app/assets/stylesheets/components/_product.scss
@@ -17,7 +17,7 @@
   margin-top: 0;
 }
 .product-details p {
-  font-weight: lighter;
+  font-weight: lighter!important;
   color: #999999;
   margin-bottom: 0;
   min-height: 40px;
@@ -25,9 +25,10 @@
 
 /* Product decsription */
 .product-description {
-  flex: 0 0 auto;
+  flex: 0 0 20%;
   margin-right: 20px;
-  max-width: 400px;
+  min-height: 180px;
+  // max-width: 400px;
 }
 
 .product-description p{
