--- a/app/assets/stylesheets/pages/_show_exhibition.scss
+++ b/app/assets/stylesheets/pages/_show_exhibition.scss
@@ -5,7 +5,7 @@
 .wrapper.exhibition {
   // margin: -41px;
   background-color: #ffffff;
-  border-top: 1px dotted $brand-color;
+  border-top: 2px solid $gray;
 }
 
 .show-all {
@@ -21,6 +21,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px dotted $brand-color;
+  border: 2px solid $gray;
   border-radius: 5px;
 }
+
+.description-content h3 {
+  text-align: center;
+}
+
+.list-exhibition i {
+  margin-right: 20px;
+}
+
+.user-paths.exhibition-show {
+    text-align: left;
+}
+
+
