--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,4 +1,4 @@
-<% link_image = @exhibition.photos.first || "banner-artist.jpeg" %>
+<% link_image = @exhibition.photos.first.path || "banner-artist.jpeg" %>
 <div class="banner-company" style="background-image: url('<%= cl_image_path link_image %>');"></div>
   <div class="wrapper exhibition padded">
     <div class="container">
@@ -14,60 +14,42 @@
               <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
               <li><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
             </ul>
-            <h2><%= @exhibition.title %></h2>
+            <h2>"<%= @exhibition.title %>"</h2>
           </div>
 
-          <p><i class="fa fa-user" aria-hidden="true"></i><%= @exhibition.user.first_name %> <%= @exhibition.user.last_name %>
-          <p><i class="fa fa-clock-o" aria-hidden="true"></i>starting: <%= @exhibition.start_date%> - ending: <%= @exhibition.end_date%></p>
+
+        <div class="list-exhibition">
+          <p><i class="fa fa-user" aria-hidden="true"></i><%= @exhibition.user.first_name %> <%= @exhibition.user.last_name %></p>
+          <p><i class="fa fa-clock-o" aria-hidden="true"></i>Starting: <%= @exhibition.start_date%>  Ending: <%= @exhibition.end_date%></p>
           <p><i class="fa fa-map-marker" aria-hidden="true"></i><%= @exhibition.address %> </p>
-          <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.min_price %>
+          <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.min_price %>$</p>
           <br>
+        </div>
 
-          <div class="description-content">
-            <h3 class="underline">Description</h3>
-              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, animi saepe rem delectus nulla aut quisquam maxime voluptas dignissimos ex eveniet sint itaque cumque nostrum, harum dicta, nisi doloribus quam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, at sed a odio ipsam quam magni ullam ipsa impedit excepturi voluptatem velit. Officia delectus animi sequi similique voluptate deserunt necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni dolores, unde. Ad amet itaque, quidem consequuntur dolorum obcaecati quia officia facere aliquid illo! Nesciunt sapiente, natus consequatur minus autem iure.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptatibus, porro nemo a. Asperiores corporis consectetur id iusto rem velit maxime possimus architecto accusantium hic vitae, laboriosam alias recusandae dignissimos.</p>
-          </div>
+        <div class="description-content text-center">
+          <h3>Description</h3>
+            <p> <%= @exhibition.description %></p>
+        </div>
 
-          <!-- <div class="carrousel-show">
-            <h3 class="underline">Office's photos:</h3>
-          </div>
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> -->
-            <!-- Indicators -->
-           <!--  <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol> -->
 
-            <!-- Wrapper for slides -->
-            <!-- <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="..." alt="...">
-                <div class="carousel-caption">
-                  ...
-                </div>
-              </div>
-              <div class="item">
-                <img src="..." alt="...">
-                <div class="carousel-caption">
-                  ...
-                </div>
-              </div>
-              ...
-            </div> -->
+          <%# updload photo  %>
 
-            <!-- Controls -->
-<!--             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div> -->
+  <!-- <div class="office-photo">
+    <h3>Office's Photos</h3>
+      <div class="container">
+        <div class="row text-center">
+          <% @exhibition.photos.each do |photo| %>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+              <%= cl_image_tag photo.path, width: 200, height: 200 , crop: :fill %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+  </div>
+ -->
 
-          <div class="user-paths text-center">
+
+          <div class="user-paths exhibition-show text-center">
               <%# if policy(@exhibition).edit? %>
                 <%#= link_to "Update", edit_exhibition_path(@exhibition) %>
               <%#end %>
